--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ GET_REQUEST=/api/booking
 POST_REQUEST=/api/booking
 
 ## CLIENT-SIDE URL
-CLIENT_SIDE_URL=https://your-client-side-url.com
+CLIENT_SIDE_URL=https://jazzy-toffee-7170fe.netlify.app
